tests/spec/fail/interface_non_object_arg.aja
interface Speaker:
    speak(prefix: str) -> str

fuc talk(s: Speaker) -> str:
    return s.speak("Hi")

print(talk(1))
